fix dark mode

--- a/src/widgets/styles.css
+++ b/src/widgets/styles.css
@@ -15,8 +15,8 @@ a {
 }
 
 .container--dark {
-  border: 1px solid #2c2f36;
-  background-color: #1e1f23;
+  border: 1px solid #414141;
+  background-color: #212121;
   color: #ffffff;
 }
 
@@ -30,7 +30,7 @@ a {
 }
 
 .container--dark .title-block {
-  border-bottom: 1px solid #2c2f36;
+  border-bottom: 1px solid #414141;
 }
 
 .title-block__text {
@@ -70,7 +70,7 @@ a {
 }
 
 .container--dark .no-data {
-  border-top: 1px solid #2c2f36;
+  border-top: 1px solid #414141;
 }
 
 .overflow {
@@ -91,10 +91,11 @@ a {
   line-height: 20px;
   letter-spacing: -0.4px;
   background-color: #f9fafb;
+  white-space: nowrap;
 }
 
 .container--dark .table__th {
-  background-color: #2c2f36;
+  background-color: #303030;
 }
 
 .table__td {
@@ -139,8 +140,8 @@ a {
 }
 
 .container--dark .table__badge {
-  border: 1px solid #2c2f36;
-  background: #2c2f36;
+  border: 1px solid #414141;
+  background: #414141;
 }
 
 .table__tr {
@@ -148,7 +149,7 @@ a {
 }
 
 .container--dark .table__tr {
-  border-top: 1px solid #2c2f36;
+  border-top: 1px solid #414141;
 }
 
 .table__line {
@@ -157,7 +158,7 @@ a {
 }
 
 .container--dark .table__line {
-  background-color: #2c2f36;
+  background-color: #212121;
 }
 
 .table__img-circle {
